--- a/styles/styles.css
+++ b/styles/styles.css
@@ -14,7 +14,7 @@
   /* colors */
   --link-color: #026169;
   --link-hover-color: #3E6470;
-  --background-color: #ffb900;
+  --background-color: #fff;
   --overlay-background-color: #eee;
   --highlight-background-color: #ccc;
   --text-color: #2C2C2C;
